# challenges

./: .gitignore  AGENTS.md  Cargo.toml  README.md  TODO.md  flake.nix
challenges/cses/: CLAUDE.md  Cargo.toml  README.md
challenges/cses/src/: lib.rs  main.rs
challenges/cses/src/dynamic_programming/: array_description.rs  book_shop.rs  coin_combinations_1.rs  dice_combinations.rs  minimizing_coins.rs  mod.rs  removing_digits.rs
challenges/cses/src/introductory/: digit_queries.rs  grid_path_description.rs  increasing_array.rs  missing_number.rs  mod.rs  number_spiral.rs  repetitions.rs  (+2 more)
challenges/dns/: Cargo.toml  README.md
challenges/dns/src/: cache.rs  client.rs  main.rs  protocol.rs  server.rs
challenges/memcached/: Cargo.toml  README.md
challenges/memcached/src/: connection.rs  lib.rs  protocol.rs  server.rs  store.rs
challenges/wc/: Cargo.toml  README.md
challenges/wc/src/: main.rs
conways/src/: game.rs  patterns.rs
dns/: Cargo.toml  README.md
dns/src/: cache.rs  client.rs  main.rs  protocol.rs  server.rs
memcached/: Cargo.toml  README.md
memcached/src/: connection.rs  lib.rs  protocol.rs  server.rs  store.rs
ts-rust/: README.md  deno.json
ts-rust/src/: lib.rs
vibe/conways/: Cargo.toml
vibe/conways/src/: game.rs  main.rs  patterns.rs  ui.rs
vibe/kcl/: AGENTS.md  README.md  kcl.mod  main.k
vibe/kcl/modules/: env.k  platform.k  tenant.k
vibe/kcl/rendered/: dev-acme.yaml  dev-globex.yaml  prod-acme.yaml  prod-globex.yaml
vibe/ts-rust/: Cargo.toml  README.md  main.ts  test.sh
wc/: README.md
wc/src/: main.rs
(+15 files in other folders)
