[workspace]
resolver = "2"

members = [
  "vibe/conways",
  "challenges/dns",
  "challenges/memcached",
  "challenges/wc",
]


[workspace.dependencies]
gpui = "0.2.2"
gpui-component = "0.5.0"
tokio = { version = "1.38.0", features = ["full"] }
cached = "0.56.0"
tower = "0.5.2"
clap = { version = "4.5.8", features = ["derive"] }
log = "0.4.22"
tracing-subscriber = "0.3.18"
moka = { version = "0.12.7", features = ["future"] }
num_cpus = "1.16.0"
