[package]
name = "memcached"
version = "0.1.0"
edition = "2021"

[lib]
src = "src/lib.rs"

[[bin]]
name = "memcached"
path = "src/bin/main.rs"

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
tokio = { version = "1.38.0", features = ["full"] }
log = "0.4.22"
tracing-subscriber = "0.3.18"
moka = {  version = "0.12.7", features = ["future"] }
num_cpus = "1.16.0"