[package]
name = "memcached"
version = "0.1.0"
edition = "2024"

[lib]
src = "src/lib.rs"

[[bin]]
name = "memcached"
path = "src/bin/main.rs"

[dependencies]
tokio = { workspace = true }
clap = { workspace = true }
log = { workspace = true }
tracing-subscriber = { workspace = true }
moka = { workspace = true }
num_cpus = { workspace = true }

